--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "tool_creation_tool"
 version = "0.1.0"
-authors = [
-  { name="Your Name", email="your.email@example.com" },
-]
 description = "A library for LLMs to dynamically create, use, store, repair, and improve Python tools."
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: AGPL-3.0 License",
     "Operating System :: OS Independent",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
